<resources>
    <string name="app_name">Who Let The Clothes Out</string>

    <string name="sohre_button">Sohre</string>
    <string name="pittman_button">Pittman</string>
    <string name="norelius_button">Norelius</string>

    <string name="welcome_message">"Gustavus Laundry App"</string>
    <string name="purpose_message">"Let\'s get your clothes cleaned!!"</string>

    <string name="instruction_message">"Click on the building and choose your machine to get started!"</string>

    <string name="unique_id">"This text will be replaced by unique ID info"</string>
    <string name="login_button">LOGIN</string>

    <string name="norelius_machines">Norelius Machines</string>
    <string name="pittman_machines">Pittman Machines</string>
    <string name="sohre_machines">Sohre Machines</string>
    <string name="washing_1">Washing Machine 1</string>
    <string name="washing_2">Washing Machine 2</string>
    <string name="washing_3">Washing Machine 3</string>
    <string name="washing_4">Washing Machine 4</string>
    <string name="washing_5">Washing Machine 5</string>
    <string name="drying_1">Drying Machine 1</string>
    <string name="drying_2">Drying Machine 2</string>
    <string name="drying_3">Drying Machine 3</string>
    <string name="drying_4">Drying Machine 4</string>
    <string name="drying_5">Drying Machine 5</string>
    <string name="back_button">Back</string>
    <string name="open_button">OPEN</string>
    <string name="use_button">IN USE</string>
    <string name="signup_button">Sign up</string>
    <string name="signup_message">Sign up!</string>


</resources>