<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/welcome_message"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:textSize="18dp"
        android:text="@string/purpose_message"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:src="@drawable/laundry_logo"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/sohreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:text="@string/sohre_button">
        </Button>

        <Button
            android:id="@+id/pittmanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pittman_button"
            android:layout_marginTop="20dp">
        </Button>

        <Button
            android:id="@+id/noreliusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/norelius_button"
            android:layout_marginTop="20dp">
        </Button>
    </LinearLayout>

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:textStyle="italic"
        android:textSize="18dp"
        android:text="@string/instruction_message"
        android:textColor="@color/black"/>


</FrameLayout>