<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/welcome_message"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="44dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:text="@string/signup_message"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:text="@string/signup_button">
    </Button>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email Address"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"/>

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:textSize="18dp"
        android:text="@string/unique_id"
        android:textColor="@color/black"/>




</FrameLayout>